# nano_vm

./: CHANGELOG.md  LICENCE  MANIFEST.in  PRO_LICENSE.md  README-1.md  README-2.md  README-3.md  README-4.md  README-6.md  README-8.md  README.md  README_llm_nano_vm.md  README_vm.md  RELEASE_v0.6.0.md  RELEASE_v0.8.0.md  RELEASE_v050.md  nano-vm-CHANGELOG.md  planner.py  pyproject.toml  readme_new.md  vm.py
.github/workflows/: autofix.yml  ci.yml  code-export-query-v2.1.yml  code-export-query-v2.2.yml  code-export-query-v2.3.yml  code-export-query-v2.4.yml  code-export-query-v2.6.yml  log-to-ip-repo.yml  publish.yml  repo-structure.yml
adapters/: litellm_adapter.py
benchmarks/: benchmark_10k_hash.py  benchmark_integration-1.py  benchmark_integration.py  benchmark_live.py  benchmark_stress.py  benchmark_stress_060.py  benchmark_v030.py  benchmark_v040.py  benchmark_v050.py  benchmark_v2.py  run_all.py  stress_test.py  stress_test_openrouter.py
examples/: demo_replay.py  simple_program.py  with_planner.py
examples/incidents/pocketos_cursor_db_delete/: README.md  incident.json  violations.md
nano_vm/: __init__.py  analyzer.py  ast_engine.py  contracts.py  models.py  planner-1.py  planner.py  projection-1.py  projection.py  telemetry.py  validator.py  vm.py
nano_vm/adapters/: __init__.py  base.py  litellm_adapter.py  mock_adapter.py
tests/: benchmark_integration.py  test_analyzer.py  test_determinism.py  test_models-1.py  test_models.py  test_parallel.py  test_planner.py  test_pv13.py  test_receipt.py  test_receipt_v2.py  test_sprint1_contracts.py  test_sprint4_core.py  test_sprint6_otel.py  test_v030_concurrency.py  test_v030_retry.py  test_v030_skipped_contract.py  test_v040_max_steps.py  test_v040_max_tokens.py  test_v040_snapshots.py  test_v040_stalled.py  test_v050_planner.py  test_v060.py  test_v070_sprint1.py  test_v070_sprint2.py  test_v070_sprint2_projection.py  test_v070_sprint3.py  test_v073_sprint5_field_access.py  test_v074_condition_semantics.py  test_v075.py  test_v080_sprint5_allowed.py  test_v080_sprint5_allowed_outputs.py  test_v080_sprint5_timeout.py  test_v081.py  test_validator.py  test_vm.py
