[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-vm"
version = "0.1.1"
description = "Deterministic VM for LLM program execution"
authors = [
    {name = "Ale007XD", email = "alex.deloverov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agent", "vm", "deterministic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40"]
yaml    = ["pyyaml>=6.0"]
dev     = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "litellm>=1.40",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/Ale007XD/nano-vm"
Homepage   = "https://github.com/Ale007XD/nano-vm"
Issues     = "https://github.com/Ale007XD/nano-vm/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["nano_vm"]
